--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     volumes:
       - .:/usr/src/app
     environment:
-      - MONGODB_URI=mongodb://mongo/notesdb
+      - MONGODB_URI=mongodb://mongo/proyectofinaldb
       - PORT=4000
       - NODE_ENV=development
     command: /bin/sh -c 'npm install && npm run dev'
