--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
     "description": "Event Logist - Proyecto Final",
     "main": "index.js",
     "type": "module",
+    "builds": [
+        { "src": "index.js", "use": "@vercel/node" }
+     ],
     "scripts": {
         "dev": "nodemon src/index.js",
-        "start": "node src/index.js"
+        "start": "node src/index.js",
+        "build": "node src/index.js"
     },
     "keywords": [],
     "author": "",
